--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -11,8 +11,12 @@
     <span>The City Works</span>
     <span>Manchester</span>
     <span>M11 2NB</span>
+    <a href="http://g.co/maps/6pjbs">View on Google Maps</a>
+
     <span class="tel">Tel. +44 (0)161 402 3271</span>
     <span>Email us at:<br/><%= mail_to "chris@urbanlites.com", "chris@urbanlites.com", encode: "hex", class: 'email_us' %></span>
+
+
   </div>
   </div>
 </div>
