--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -324,3 +324,5 @@ a {
 @import "sessions";
 
 a:active, a:selected, a:visited { border: none !important; outline: none !important; }
+
+@import "sushislider";
