--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,8 @@
     }
   </style>
   <![endif]-->
-  <%#= javascript_include_tag "modernizr" %>
-  <%#= javascript_include_tag("//maps.googleapis.com/maps/api/js?sensor=false") if action_name == "contact" %>
+  <%= javascript_include_tag "modernizr" %>
+  <%= javascript_include_tag("//maps.googleapis.com/maps/api/js?sensor=false") if action_name == "contact" %>
   <%= csrf_meta_tags %>
 </head>
 <body id="c-<%= controller_name %>-a-<%= action_name %>">
