--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -10,7 +10,7 @@ a {
 body {
   background: #FEFEFE;
   font-size: 15px;
-  font-family: 'Lucida Grande';
+  font-family: 'Lucida Grande', 'Tahoma', sans;
   margin-bottom: 20px;
 }
 
