--- a/app/assets/stylesheets/activity.css.scss
+++ b/app/assets/stylesheets/activity.css.scss
@@ -18,13 +18,13 @@ img.twitter_media {
 
 ul#social_columns > li {
 
-.video {
-  width: 100%;
-  height: 300px;
-  background: black image-url('loading.gif') center center no-repeat;
-  margin-bottom: 15px;
-//  iframe { display: none;}
-}
+  .video {
+    width: 100%;
+    height: 300px;
+    background: black image-url('loading.gif') center center no-repeat;
+    margin-bottom: 15px;
+  //  iframe { display: none;}
+  }
 
   h2 {
     display:block;
@@ -35,8 +35,13 @@ ul#social_columns > li {
     @extend .hide_text;
   }
 
+  &.facebook {
+    @include grid(1);
+    h2 { background-position: -52px -52px; }
+  }
+
   &.youtube {
-    @include grid(3);
+    @include grid(2);
     h2 { background-position: -2px -2px; }
   }
 
