--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -5,6 +5,7 @@
   <title>ADMIN : Urban Lites</title>
   <meta name="viewport" content="width=device-width">
   <%= stylesheet_link_tag    "admin", :media => "all" %>
+  <%= javascript_include_tag "modernizr" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
@@ -17,8 +18,9 @@
     <li><%= link_to "Frontpage", admin_frontpage_index_path %></li>
     <li><%= link_to "Projects", admin_projects_path %></li>
     <li><%= link_to "Services", admin_services_path %></li>
-    <li><%= link_to "Downloads", admin_downloads_path %></li>
     <li><%= link_to "Our Ethos", admin_ethoses_path %></li>
+    <li><%= link_to "Downloads", admin_downloads_path %></li>
+
     <%#= link_to "Contact", admin_projects_path %>
     <li><%= link_to("Preview Site", root_path) %></li>
 
