fixed some admin

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -225,6 +225,9 @@ a {
     font-size: 2.1em;
     padding: 0;
     margin: 0;
+    a {
+      color: #FFF;
+    }
   }
   span {
     display: block;
