--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -40,7 +40,7 @@
         </li>
       <% end %>
       <li class="item video" data-youtube-id="5WWrQ9Rgk_4">
-        <h1><%= link_to 'project.name', 'project' %></h1>
+        <!--<h1><%= link_to 'project.name', 'project' %></h1>-->
       </li>
     </ul>
     </div>
