--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -1,5 +1,11 @@
 @import "jquery.Jcrop.css";
 @import 'bourbon';
+
+
+a.delete {
+  color: red;
+}
+
 a {
   text-decoration: none;
 }
@@ -14,6 +20,12 @@ body {
   margin-bottom: 20px;
 }
 
+ol,li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
 table {
   margin: 20px 0;
   td {
@@ -26,6 +38,10 @@ table {
 }
 #photos li:first-child {
   border: 2px solid yellow;
+}
+
+td.move {
+  cursor: move;
 }
 
 ul.sortable {
@@ -45,15 +61,20 @@ ol#bsmListbsmContainer0 {
 }
 li.bsmListItem {
   padding: 4px;
-  margin-left: 20px;
+//  margin-left: 20px;
   cursor: move;
   border-bottom: 1px solid #EEE;
 }
-span.bsmListItemLabel {
-  width: 200px;
-  display: block;
-  float: left;
+a.bsmListItemRemove {
+  float: right;
+  @extend a.delete;
 }
+//span.bsmListItemLabel {
+//  width: 200px;
+//  display: block;
+//  float: left;
+//}
+
 .field {
   margin-bottom: 10px;
 }
@@ -136,27 +157,27 @@ span.hint {
 }
 
 #media {
-  .bsmList {
-    margin: 0;
-    padding: 0;
-  }
-  .bsmListItem {
-    font-size: .7em;
-    padding: 5px;
-    width: 90px;
-    height: 90px;
-    display: block;
-    float: left;
-    margin: 10px;
-    border: 1px solid black;
-    list-style: none;
-    position: relative;
-  }
-  .bsmListItemRemove {
-    position: absolute;
-    top: 0;
-    right: 0;
-  }
+//  .bsmList {
+//    margin: 0;
+//    padding: 0;
+//  }
+//  .bsmListItem {
+//    font-size: .7em;
+//    padding: 5px;
+//    width: 90px;
+//    height: 90px;
+//    display: block;
+//    float: left;
+//    margin: 10px;
+//    border: 1px solid black;
+//    list-style: none;
+//    position: relative;
+//  }
+//  .bsmListItemRemove {
+//    position: absolute;
+//    top: 0;
+//    right: 0;
+//  }
 }
 
 .field_with_errors {
