--- a/app/views/admin/services/index.html.erb
+++ b/app/views/admin/services/index.html.erb
@@ -1,10 +1,13 @@
 <div>
   <h1>Services</h1>
+
+  <span class="hint">All services. Because of the design of the page if you need to add or remove any so that there are no longer five please contact Rapport.</span>
+
 <table class="sortable" data-update-url="<%= sort_admin_services_url %>">
 <% @services.each do |service| %>
 <%= content_tag_for :tr, service do %>
 
-    <td>+</td>
+    <td class="move"><%= image_tag "move.png" %></td>
 
   <td><%= link_to service, edit_admin_service_path(service) %></td>
 <% end %>
