--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -24,7 +24,7 @@
     <%#= link_to "Contact", admin_projects_path %>
     <li><%= link_to("Preview Site", root_path) %></li>
 
-    <li><%= current_user %></li>
+    <!--<li><%= current_user %></li>-->
     <li id="logout"><%= link_to "Logout", logout_path %></li>
   </ul>
   </div>
