--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -39,9 +39,9 @@
             </div>
         </li>
       <% end %>
-      <li class="item video" data-youtube-id="5WWrQ9Rgk_4">
-        <!--<h1><%= link_to 'project.name', 'project' %></h1>-->
-      </li>
+      <!--<li class="item video" data-youtube-id="5WWrQ9Rgk_4">
+        <h1><%= link_to 'project.name', 'project' %></h1>
+      </li>-->
     </ul>
     </div>
   </div>
