--- a/app/assets/stylesheets/activity.css.scss
+++ b/app/assets/stylesheets/activity.css.scss
@@ -1,3 +1,11 @@
+li.video {
+  width: 100%;
+  height: 300px;
+  background: black image-url('loading.gif') center center no-repeat;
+  margin-bottom: 15px;
+//  iframe { display: none;}
+}
+
 // Place all the styles related to the Activity controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
@@ -20,7 +28,7 @@ ul#social_columns > li {
 
   .video {
     width: 100%;
-    height: 220px;
+    height: 300px;
     background: black image-url('loading.gif') center center no-repeat;
     margin-bottom: 15px;
   //  iframe { display: none;}
@@ -41,12 +49,12 @@ ul#social_columns > li {
   }
 
   &.youtube {
-    @include grid(2);
+    @include grid(3);
     h2 { background-position: -2px -2px; }
   }
 
   &.twitter {
-    @include grid(2);
+    @include grid(1);
     h2 { background-position: -2px -52px; }
   }
 
