--- a/app/views/admin/projects/index.html.erb
+++ b/app/views/admin/projects/index.html.erb
@@ -8,9 +8,9 @@
       <tr>
         <th></th>
         <th>Name</th>
-        <th>Updated at</th>
-        <th># Quotes</th>
-        <th># Photos</th>
+        <th>Quotes</th>
+        <th>Photos</th>
+        <th>Videos</th>
         <th></th>
       </tr>
     </thead>
@@ -18,9 +18,9 @@
     <%= content_tag_for :tr, project do %>
       <td class="move"><%= image_tag "move.png" %></td>
       <td><%= link_to project, edit_admin_project_path(project) %></td>
-      <td><%= l(project.updated_at, format: :short) %></td>
       <td><%= project.quotes.size %></td>
       <td><%= project.photos.size %></td>
+      <td><%= project.videos.size %></td>
       <td><%= link_to "Delete", admin_project_path(project), method: :delete, confirm: "Are you sure?", class: 'delete' %></td>
     <% end %>
   <% end %>
