--- a/app/assets/stylesheets/services.css.scss
+++ b/app/assets/stylesheets/services.css.scss
@@ -39,6 +39,8 @@ ul#services {
     .description {
       bottom: 1px;
       font-size: 1em;
+      opacity:inherit;
+      filter:inherit;
     }
   }
 }
