--- a/app/assets/stylesheets/sushislider.scss
+++ b/app/assets/stylesheets/sushislider.scss
@@ -17,6 +17,7 @@
     bottom: 10px;
     right: 30px;
     z-index: 99;
+    background-image: image-url('pngs/black_bg.png');
     background: rgba(0,0,0,0.5);
     margin: 0;
     padding: 5px;
