--- a/app/assets/stylesheets/slider.css.scss
+++ b/app/assets/stylesheets/slider.css.scss
@@ -1,99 +1,99 @@
-/* Basic jQuery Slider essential styles */
-
-ul.bjqs{position:relative; list-style:none;padding:0;margin:0;overflow:hidden; display:none;}
-li.bjqs-slide{display:none;position:absolute;}
-
-ul.bjqs-controls{list-style:none;margin:0;padding:0;z-index:9999;}
-
-ol.bjqs-markers{list-style:none;margin:0;padding:0;z-index:9999;}
-ol.bjqs-markers li{float:left;}
-
-p.bjqs-caption{display:block;width:96%;margin:0;padding:2%;position:absolute;bottom:0;}
-
-/* demo styles */
-
-#container{
-  width:980px;
-  padding:100px 0;
-  margin:0 auto;
-  overflow:hidden;
-}
-
-#banner {
-  height:300px;
-  width:700px;
-  margin:0 auto;
-  position:relative;
-  background:#fff;
-  border:20px #fff solid;
-  box-shadow:0 0 50px rgba(0,0,0,0.5);
-}
-
- ul.bjqs-controls li a{
-  display:block;
-  padding:5px 10px;
-  position:absolute;
-  background:#fff;
-  color:#fd0100;
-  text-decoration:none;
-  text-transform:uppercase;
-}
-
-a.bjqs-prev{
-  left:0;
-  z-index: 999999;
-}
-
-a.bjqs-next{
-  right:0;
-  z-index: 999999;
-}
-
- p.bjqs-caption{
-  background:rgba(0,0,0,0.7);
-  color:#fff;
-  text-align:center;
-}
-
- ol.bjqs-markers{
-  position:absolute;
-//  bottom:-50px;
-bottom: 20px;
-right: 32px;
-}
-
- ol.bjqs-markers li{
-  float:left;
-  margin:0 3px;
-
-  width: 26px;
-  height: 26px;
-  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
-	filter: alpha(opacity=40);
-  opacity: .4;
-  background:#4a63ae;
-  text-align: center;
-  line-height: 26px;
-  a { color: #000; }
-  font-size: 1.3em;
-  cursor: pointer;
-
-}
-
-// ol.bjqs-markers li a{
-//  display:block;
-//  height:10px;
-//  width:10px;
-//  border:4px solid #fff;
+///* Basic jQuery Slider essential styles */
+//
+//ul.bjqs{position:relative; list-style:none;padding:0;margin:0;overflow:hidden; display:none;}
+//li.bjqs-slide{display:none;position:absolute;}
+//
+//ul.bjqs-controls{list-style:none;margin:0;padding:0;z-index:9999;}
+//
+//ol.bjqs-markers{list-style:none;margin:0;padding:0;z-index:9999;}
+//ol.bjqs-markers li{float:left;}
+//
+//p.bjqs-caption{display:block;width:96%;margin:0;padding:2%;position:absolute;bottom:0;}
+//
+///* demo styles */
+//
+//#container{
+//  width:980px;
+//  padding:100px 0;
+//  margin:0 auto;
 //  overflow:hidden;
-//  text-indent:-9999px;
-//  background:#000;
-//  border-radius:10px;
+//}
+//
+//#banner {
+//  height:300px;
+//  width:700px;
+//  margin:0 auto;
+//  position:relative;
+//  background:#fff;
+//  border:20px #fff solid;
 //  box-shadow:0 0 50px rgba(0,0,0,0.5);
 //}
-
-ol.bjqs-markers li.active-marker{
-  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-	filter: alpha(opacity=100);
-  opacity: 1;
-}
+//
+// ul.bjqs-controls li a{
+//  display:block;
+//  padding:5px 10px;
+//  position:absolute;
+//  background:#fff;
+//  color:#fd0100;
+//  text-decoration:none;
+//  text-transform:uppercase;
+//}
+//
+//a.bjqs-prev{
+//  left:0;
+//  z-index: 999999;
+//}
+//
+//a.bjqs-next{
+//  right:0;
+//  z-index: 999999;
+//}
+//
+// p.bjqs-caption{
+//  background:rgba(0,0,0,0.7);
+//  color:#fff;
+//  text-align:center;
+//}
+//
+// ol.bjqs-markers{
+//  position:absolute;
+////  bottom:-50px;
+//bottom: 20px;
+//right: 32px;
+//}
+//
+// ol.bjqs-markers li{
+//  float:left;
+//  margin:0 3px;
+//
+//  width: 26px;
+//  height: 26px;
+//  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
+//  filter: alpha(opacity=40);
+//  opacity: .4;
+//  background:#4a63ae;
+//  text-align: center;
+//  line-height: 26px;
+//  a { color: #000; }
+//  font-size: 1.3em;
+//  cursor: pointer;
+//
+//}
+//
+//// ol.bjqs-markers li a{
+////  display:block;
+////  height:10px;
+////  width:10px;
+////  border:4px solid #fff;
+////  overflow:hidden;
+////  text-indent:-9999px;
+////  background:#000;
+////  border-radius:10px;
+////  box-shadow:0 0 50px rgba(0,0,0,0.5);
+////}
+//
+//ol.bjqs-markers li.active-marker{
+//  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+//  filter: alpha(opacity=100);
+//  opacity: 1;
+//}
