--- a/app/assets/stylesheets/sushislider.scss
+++ b/app/assets/stylesheets/sushislider.scss
@@ -17,19 +17,26 @@
     bottom: 10px;
     right: 30px;
     z-index: 99;
+    height: 110px;
     background-image: image-url('pngs/black_bg.png');
     background: rgba(0,0,0,0.5);
     margin: 0;
     padding: 5px;
+//    padding: 5px;
+    overflow: hidden;
     li {
+      cursor: pointer;
       @include unselectable;
       float: left;
       margin: 5px;
-      img { opacity: 0.5; }
-      &.active {
+      img { @include opacity(0.5); }
+      &.active, &:hover.active {
 //        border: 1px solid $blue;
-        img {opacity: 1;}
+        img {
+          @include opacity(1);
         }
+        }
+      &:hover { img { @include opacity(.7);}}
     }
   }
   #previous, #next {
