--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,5 @@
+<% title @project %>
+
 <div id="project_buttons">
 <div id="previous_project">
   <%= link_to("← #{@project.previous}", @project.previous) if @project.previous %>
