--- a/app/assets/stylesheets/sushislider.scss
+++ b/app/assets/stylesheets/sushislider.scss
@@ -1,7 +1,8 @@
 #sushislider {
   h1 {
-    padding: 10px;
     line-height: 1em;
+    position: relative;
+    padding: 10px;
   }
   margin-left: -10px;
   width: 920px;
